icons and tweaks to landing page header

--- a/patternlab/public/patterns/00-atoms-01-global/index.html
+++ b/patternlab/public/patterns/00-atoms-01-global/index.html
@@ -144,9 +144,9 @@
 						<div class="sg-pattern-body">
 							<h2>Heading font: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</h2>
 <h2><em>Heading font italic: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</em></h2>
-<p>Primary font: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</p>
-<p><em>Primary font italic: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</em></p>
-<p><strong>Primary font bold: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</strong></p>
+<p>Primary font: Arial, sans-serif;</p>
+<p><em>Primary font italic: Arial, sans-serif;</em></p>
+<p><strong>Primary font bold: Arial, sans-serif;</strong></p>
 <p><code>Monospace font: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</code></p>
 <p><code><em>Monospace font italic: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</em></code></p>
 <p><code><strong>Monospace font bold: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</strong></code></p>
@@ -157,9 +157,9 @@
 									<code>
 										&lt;h2&gt;Heading font: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/h2&gt;
 &lt;h2&gt;&lt;em&gt;Heading font italic: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/em&gt;&lt;/h2&gt;
-&lt;p&gt;Primary font: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/p&gt;
-&lt;p&gt;&lt;em&gt;Primary font italic: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/em&gt;&lt;/p&gt;
-&lt;p&gt;&lt;strong&gt;Primary font bold: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/strong&gt;&lt;/p&gt;
+&lt;p&gt;Primary font: Arial, sans-serif;&lt;/p&gt;
+&lt;p&gt;&lt;em&gt;Primary font italic: Arial, sans-serif;&lt;/em&gt;&lt;/p&gt;
+&lt;p&gt;&lt;strong&gt;Primary font bold: Arial, sans-serif;&lt;/strong&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;Monospace font: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/code&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;&lt;em&gt;Monospace font italic: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/em&gt;&lt;/code&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;&lt;strong&gt;Monospace font bold: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/strong&gt;&lt;/code&gt;&lt;/p&gt;
