--- a/patternlab/public/patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.html
+++ b/patternlab/public/patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.html
@@ -51,7 +51,7 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<div class="pane pane--landing-intro">
+<div class="pane pane--about-introduction pane--landing-intro">
   <div class="pane__content">
     <div class="pane--landing-intro__left">
       <h1>Page Title</h1>
