--- a/patternlab/public/patterns/00-atoms-10-page-elements/index.html
+++ b/patternlab/public/patterns/00-atoms-10-page-elements/index.html
@@ -100,7 +100,7 @@
 					<div id="atoms-landing-page-intro" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.html" class="patternLink" data-patternpartial="atoms-landing-page-intro">Landing Page Intro</a></h2>
 						<div class="sg-pattern-body">
-							<div class="pane pane--landing-intro">
+							<div class="pane pane--about-introduction pane--landing-intro">
   <div class="pane__content">
     <div class="pane--landing-intro__left">
       <h1>Page Title</h1>
@@ -115,7 +115,7 @@
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;div class=&quot;pane pane--landing-intro&quot;&gt;
+										&lt;div class=&quot;pane pane--about-introduction pane--landing-intro&quot;&gt;
   &lt;div class=&quot;pane__content&quot;&gt;
     &lt;div class=&quot;pane--landing-intro__left&quot;&gt;
       &lt;h1&gt;Page Title&lt;/h1&gt;
