--- a/patternlab/public/styleguide/html/styleguide.html
+++ b/patternlab/public/styleguide/html/styleguide.html
@@ -144,9 +144,9 @@
 						<div class="sg-pattern-body">
 							<h2>Heading font: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</h2>
 <h2><em>Heading font italic: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</em></h2>
-<p>Primary font: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</p>
-<p><em>Primary font italic: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</em></p>
-<p><strong>Primary font bold: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;</strong></p>
+<p>Primary font: Arial, sans-serif;</p>
+<p><em>Primary font italic: Arial, sans-serif;</em></p>
+<p><strong>Primary font bold: Arial, sans-serif;</strong></p>
 <p><code>Monospace font: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</code></p>
 <p><code><em>Monospace font italic: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</em></code></p>
 <p><code><strong>Monospace font bold: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;</strong></code></p>
@@ -157,9 +157,9 @@
 									<code>
 										&lt;h2&gt;Heading font: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/h2&gt;
 &lt;h2&gt;&lt;em&gt;Heading font italic: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/em&gt;&lt;/h2&gt;
-&lt;p&gt;Primary font: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/p&gt;
-&lt;p&gt;&lt;em&gt;Primary font italic: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/em&gt;&lt;/p&gt;
-&lt;p&gt;&lt;strong&gt;Primary font bold: Lato, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;&lt;/strong&gt;&lt;/p&gt;
+&lt;p&gt;Primary font: Arial, sans-serif;&lt;/p&gt;
+&lt;p&gt;&lt;em&gt;Primary font italic: Arial, sans-serif;&lt;/em&gt;&lt;/p&gt;
+&lt;p&gt;&lt;strong&gt;Primary font bold: Arial, sans-serif;&lt;/strong&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;Monospace font: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/code&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;&lt;em&gt;Monospace font italic: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/em&gt;&lt;/code&gt;&lt;/p&gt;
 &lt;p&gt;&lt;code&gt;&lt;strong&gt;Monospace font bold: Consolas, &quot;Lucida Console&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace, sans-serif;&lt;/strong&gt;&lt;/code&gt;&lt;/p&gt;
@@ -1368,7 +1368,7 @@ p q r s t u v w x y z { | } ~
 					<div id="atoms-landing-page-intro" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-10-page-elements-02-landing-page-intro/00-atoms-10-page-elements-02-landing-page-intro.html" class="patternLink" data-patternpartial="atoms-landing-page-intro">Landing Page Intro</a></h2>
 						<div class="sg-pattern-body">
-							<div class="pane pane--landing-intro">
+							<div class="pane pane--about-introduction pane--landing-intro">
   <div class="pane__content">
     <div class="pane--landing-intro__left">
       <h1>Page Title</h1>
@@ -1383,7 +1383,7 @@ p q r s t u v w x y z { | } ~
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;div class=&quot;pane pane--landing-intro&quot;&gt;
+										&lt;div class=&quot;pane pane--about-introduction pane--landing-intro&quot;&gt;
   &lt;div class=&quot;pane__content&quot;&gt;
     &lt;div class=&quot;pane--landing-intro__left&quot;&gt;
       &lt;h1&gt;Page Title&lt;/h1&gt;
@@ -1873,12 +1873,12 @@ p q r s t u v w x y z { | } ~
     <h2 class="element-invisible block__title">Main menu</h2>
     <div class="tb-megamenu-main-menu">
       <ul class="nav tb-megamenu-nav">
-        <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#">About</a></li>
-        <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#">Innovations</a></li>
-        <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#">Funding</a></li>
-        <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#">Resources</a></li>
-        <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#">Communities</a></li>
-        <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#">More</a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#"> About </a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#"> Innovations </a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#"> Funding </a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#"> Resources </a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#"> Communities </a></li>
+        <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#"> More </a></li>
       </ul>
     </div>
   </nav>
@@ -1897,12 +1897,12 @@ p q r s t u v w x y z { | } ~
     &lt;h2 class=&quot;element-invisible block__title&quot;&gt;Main menu&lt;/h2&gt;
     &lt;div class=&quot;tb-megamenu-main-menu&quot;&gt;
       &lt;ul class=&quot;nav tb-megamenu-nav&quot;&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Innovations&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Funding&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Resources&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Communities&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;More&lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; About &lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Innovations &lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Funding &lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Resources &lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Communities &lt;/a&gt;&lt;/li&gt;
+        &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; More &lt;/a&gt;&lt;/li&gt;
       &lt;/ul&gt;
     &lt;/div&gt;
   &lt;/nav&gt;
@@ -1920,12 +1920,12 @@ p q r s t u v w x y z { | } ~
   <h2 class="element-invisible block__title">Main menu</h2>
   <div class="tb-megamenu-main-menu">
     <ul class="nav tb-megamenu-nav">
-      <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#">About</a></li>
-      <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#">Innovations</a></li>
-      <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#">Funding</a></li>
-      <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#">Resources</a></li>
-      <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#">Communities</a></li>
-      <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#">More</a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#"> About </a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#"> Innovations </a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#"> Funding </a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#"> Resources </a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#"> Communities </a></li>
+      <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#"> More </a></li>
     </ul>
   </div>
 </nav>
@@ -1938,12 +1938,12 @@ p q r s t u v w x y z { | } ~
   &lt;h2 class=&quot;element-invisible block__title&quot;&gt;Main menu&lt;/h2&gt;
   &lt;div class=&quot;tb-megamenu-main-menu&quot;&gt;
     &lt;ul class=&quot;nav tb-megamenu-nav&quot;&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Innovations&lt;/a&gt;&lt;/li&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Funding&lt;/a&gt;&lt;/li&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Resources&lt;/a&gt;&lt;/li&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Communities&lt;/a&gt;&lt;/li&gt;
-      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;More&lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; About &lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Innovations &lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Funding &lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Resources &lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Communities &lt;/a&gt;&lt;/li&gt;
+      &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; More &lt;/a&gt;&lt;/li&gt;
     &lt;/ul&gt;
   &lt;/div&gt;
 &lt;/nav&gt;
@@ -2909,12 +2909,12 @@ p q r s t u v w x y z { | } ~
       <h2 class="element-invisible block__title">Main menu</h2>
       <div class="tb-megamenu-main-menu">
         <ul class="nav tb-megamenu-nav">
-          <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#">About</a></li>
-          <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#">Innovations</a></li>
-          <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#">Funding</a></li>
-          <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#">Resources</a></li>
-          <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#">Communities</a></li>
-          <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#">More</a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--about"><a class="" href="#"> About </a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--innovations"><a class="" href="#"> Innovations </a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--funding"><a class="" href="#"> Funding </a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--resources"><a class="" href="#"> Resources </a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--communities dropdown"><a class="" href="#"> Communities </a></li>
+          <li class="tb-megamenu-item tb-megamenu-item--more dropdown"><a class="" href="#"> More </a></li>
         </ul>
       </div>
     </nav>
@@ -2954,12 +2954,12 @@ p q r s t u v w x y z { | } ~
       &lt;h2 class=&quot;element-invisible block__title&quot;&gt;Main menu&lt;/h2&gt;
       &lt;div class=&quot;tb-megamenu-main-menu&quot;&gt;
         &lt;ul class=&quot;nav tb-megamenu-nav&quot;&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Innovations&lt;/a&gt;&lt;/li&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Funding&lt;/a&gt;&lt;/li&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Resources&lt;/a&gt;&lt;/li&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;Communities&lt;/a&gt;&lt;/li&gt;
-          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt;More&lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--about&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; About &lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--innovations&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Innovations &lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--funding&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Funding &lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--resources&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Resources &lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--communities dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; Communities &lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;tb-megamenu-item tb-megamenu-item--more dropdown&quot;&gt;&lt;a class=&quot;&quot; href=&quot;#&quot;&gt; More &lt;/a&gt;&lt;/li&gt;
         &lt;/ul&gt;
       &lt;/div&gt;
     &lt;/nav&gt;
