--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.html
@@ -199,9 +199,9 @@
 
           <div class="node node--innovation node--full view-mode-full">
 
-            <div class="innovation-stats">
+            <div class="stats">
               <h2>Innovation Stats</h2>
-              <div class="innovation-stats__first">
+              <div class="stats__first">
                 <div class="field clearfix field--innovation-funding-goal">
                   <div class="field-label">Funding Goal:&nbsp;</div>
                   <div class="field-items">
@@ -234,7 +234,7 @@
                   </div>
                 </div>
               </div>
-              <div class="innovation-stats__second">
+              <div class="stats__second">
                 <div class="field clearfix field--innovation-created">
                   <div class="field-label">Created In:&nbsp;</div>
                   <div class="field-items">
