--- a/public/sites/all/themes/gesso/patternlab/patterns/04-pages-02-innovation-detail/04-pages-02-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/04-pages-02-innovation-detail/04-pages-02-innovation-detail.escaped.html
@@ -195,9 +195,9 @@
     
               &lt;div class=&quot;node node--innovation node--full view-mode-full&quot;&gt;
     
-                &lt;div class=&quot;innovation-stats&quot;&gt;
+                &lt;div class=&quot;stats&quot;&gt;
                   &lt;h2&gt;Innovation Stats&lt;/h2&gt;
-                  &lt;div class=&quot;innovation-stats__first&quot;&gt;
+                  &lt;div class=&quot;stats__first&quot;&gt;
                     &lt;div class=&quot;field clearfix field--innovation-funding-goal&quot;&gt;
                       &lt;div class=&quot;field-label&quot;&gt;Funding Goal:&amp;nbsp;&lt;/div&gt;
                       &lt;div class=&quot;field-items&quot;&gt;
@@ -230,7 +230,7 @@
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
-                  &lt;div class=&quot;innovation-stats__second&quot;&gt;
+                  &lt;div class=&quot;stats__second&quot;&gt;
                     &lt;div class=&quot;field clearfix field--innovation-created&quot;&gt;
                       &lt;div class=&quot;field-label&quot;&gt;Created In:&amp;nbsp;&lt;/div&gt;
                       &lt;div class=&quot;field-items&quot;&gt;
