--- a/public/sites/all/themes/gesso/patternlab/styleguide/html/styleguide.html
+++ b/public/sites/all/themes/gesso/patternlab/styleguide/html/styleguide.html
@@ -3297,9 +3297,9 @@ p q r s t u v w x y z { | } ~
 
           <div class="node node--innovation node--full view-mode-full">
 
-            <div class="innovation-stats">
+            <div class="stats">
               <h2>Innovation Stats</h2>
-              <div class="innovation-stats__first">
+              <div class="stats__first">
                 <div class="field clearfix field--innovation-funding-goal">
                   <div class="field-label">Funding Goal:&nbsp;</div>
                   <div class="field-items">
@@ -3332,7 +3332,7 @@ p q r s t u v w x y z { | } ~
                   </div>
                 </div>
               </div>
-              <div class="innovation-stats__second">
+              <div class="stats__second">
                 <div class="field clearfix field--innovation-created">
                   <div class="field-label">Created In:&nbsp;</div>
                   <div class="field-items">
@@ -3828,9 +3828,9 @@ p q r s t u v w x y z { | } ~
 
           &lt;div class=&quot;node node--innovation node--full view-mode-full&quot;&gt;
 
-            &lt;div class=&quot;innovation-stats&quot;&gt;
+            &lt;div class=&quot;stats&quot;&gt;
               &lt;h2&gt;Innovation Stats&lt;/h2&gt;
-              &lt;div class=&quot;innovation-stats__first&quot;&gt;
+              &lt;div class=&quot;stats__first&quot;&gt;
                 &lt;div class=&quot;field clearfix field--innovation-funding-goal&quot;&gt;
                   &lt;div class=&quot;field-label&quot;&gt;Funding Goal:&amp;nbsp;&lt;/div&gt;
                   &lt;div class=&quot;field-items&quot;&gt;
@@ -3863,7 +3863,7 @@ p q r s t u v w x y z { | } ~
                   &lt;/div&gt;
                 &lt;/div&gt;
               &lt;/div&gt;
-              &lt;div class=&quot;innovation-stats__second&quot;&gt;
+              &lt;div class=&quot;stats__second&quot;&gt;
                 &lt;div class=&quot;field clearfix field--innovation-created&quot;&gt;
                   &lt;div class=&quot;field-label&quot;&gt;Created In:&amp;nbsp;&lt;/div&gt;
                   &lt;div class=&quot;field-items&quot;&gt;
