added homepage layout and fixed landing page layout

--- a/patternlab/public/patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.escaped.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.escaped.html
@@ -1,5 +1,5 @@
 &lt;div class=&quot;pane pane--favorite-this&quot;&gt;
-  &lt;h2 class=&quot;pane__title&quot;&gt;Like This Innovation?
+  &lt;h2 class=&quot;pane__title&quot;&gt;Like This ?
     &lt;p&gt;
       Add it to your favorites.
     &lt;/p&gt;
