--- a/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -157,11 +157,11 @@
 							</div>
 						</div>
 					</div>
-					<div id="molecules-favorite-innovation" class="sg-pattern">
-						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-favorite-innovation/01-molecules-04-panes-favorite-innovation.html" class="patternLink" data-patternpartial="molecules-favorite-innovation">Favorite Innovation</a></h2>
+					<div id="molecules-favorite-this" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.html" class="patternLink" data-patternpartial="molecules-favorite-this">Favorite This</a></h2>
 						<div class="sg-pattern-body">
 							<div class="pane pane--favorite-this">
-  <h2 class="pane__title">Like This Innovation?
+  <h2 class="pane__title">Like This ?
     <p>
       Add it to your favorites.
     </p>
@@ -176,7 +176,7 @@
 								<pre class="sg-code-html">
 									<code>
 										&lt;div class=&quot;pane pane--favorite-this&quot;&gt;
-  &lt;h2 class=&quot;pane__title&quot;&gt;Like This Innovation?
+  &lt;h2 class=&quot;pane__title&quot;&gt;Like This ?
     &lt;p&gt;
       Add it to your favorites.
     &lt;/p&gt;
