--- a/patternlab/public/patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.html
@@ -52,7 +52,7 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <div class="pane pane--favorite-this">
-  <h2 class="pane__title">Like This Innovation?
+  <h2 class="pane__title">Like This ?
     <p>
       Add it to your favorites.
     </p>
@@ -66,9 +66,9 @@
     	
 	<script>
 		// handle injection of items from PHP
-		var patternPartial = "molecules-favorite-innovation";
+		var patternPartial = "molecules-favorite-this";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-innovation","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-02-innovation\/02-organisms-01-content-types-02-innovation.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"organisms-innovation","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-02-innovation\/02-organisms-01-content-types-02-innovation.html","lineageState":"inprogress"},{"lineagePattern":"organisms-funding","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-04-funding\/02-organisms-01-content-types-04-funding.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
