--- a/patternlab/public/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.html
+++ b/patternlab/public/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.html
@@ -116,7 +116,7 @@
         </div>
         <aside class="l-main-sidebar">
       <div class="pane pane--favorite-this">
-        <h2 class="pane__title">Like This Innovation?
+        <h2 class="pane__title">Like This ?
           <p>
             Add it to your favorites.
           </p>
