--- a/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.html
+++ b/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.html
@@ -98,8 +98,62 @@
 </div>
 
 <main id="main" class="main" role="main">
-	<div class="region-content layout-constrain">
-  	<p>Homepage content goes here&hellip;</p>
+	<div class="region-content">
+    <div class="l-panels-home hero content villain postscript">
+      <div class="l-hero">
+         <div class="pane pane--homepage-header">
+           <h2 class="pane__title"></h2>  
+           <div class="pane__content">
+           </div>
+         </div>      </div>
+      <div class="l-content">
+        <div class="layout-constrain">
+          <div class="pane pane--homepage-views-personas-pane">
+            <h2 class="pane__title"></h2>  
+            <div class="pane__content">
+            </div>
+          </div>          <div class="pane pane--homepage-views-action-card-panes">
+            <h2 class="pane__title">Find your place on the Exchange</h2>  
+            <div class="pane__content">
+              <div class="view view--homepage-cardflip">
+                <div class="views-row">
+                  <div class="cardflip cardflip--a">
+                    <div class="cardflip__title">Help an Innovator</div>
+                    <div class="cardflip__image"></div>
+                  </div>
+                  <div class="cardflip cardflip--b">
+                    <div class="cardflip__title">Help an Innovator</div>
+                    <div class="cardflip__description">Discussion on the Exchange await your insight!</div>
+                    <div class="cardflip__link"><a href="#">View Discussions</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>          <div class="pane pane--homepage-views-staff-picks-pane">
+            <h2 class="pane__title"></h2>  
+            <div class="pane__content">
+            </div>
+          </div>          <div class="pane pane--homepage-views-funding-pane">
+            <h2 class="pane__title"></h2>  
+            <div class="pane__content">
+            </div>
+          </div>        </div>
+      </div>
+      <div class="l-villain">
+         <div class="pane pane--homepage-footer-callout">
+           <h2 class="pane__title"></h2>  
+           <div class="pane__content">
+           </div>
+         </div>      </div>
+      <div class="l-postscript">
+        <div class="layout-constrain">
+          <div class="pane pane--homepage-join-callout">
+            <h2 class="pane__title"></h2>  
+            <div class="pane__content">
+            </div>
+          </div>        </div>
+      </div>
+    </div>
   </div>
 </main>
 
