--- a/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.escaped.html
+++ b/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.escaped.html
@@ -45,8 +45,62 @@
 &lt;/div&gt;
 
 &lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot;&gt;
-	&lt;div class=&quot;region-content layout-constrain&quot;&gt;
-  	&lt;p&gt;Homepage content goes here&amp;hellip;&lt;/p&gt;
+	&lt;div class=&quot;region-content&quot;&gt;
+    &lt;div class=&quot;l-panels-home hero content villain postscript&quot;&gt;
+      &lt;div class=&quot;l-hero&quot;&gt;
+         &lt;div class=&quot;pane pane--homepage-header&quot;&gt;
+           &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+           &lt;div class=&quot;pane__content&quot;&gt;
+           &lt;/div&gt;
+         &lt;/div&gt;      &lt;/div&gt;
+      &lt;div class=&quot;l-content&quot;&gt;
+        &lt;div class=&quot;layout-constrain&quot;&gt;
+          &lt;div class=&quot;pane pane--homepage-views-personas-pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+            &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;          &lt;div class=&quot;pane pane--homepage-views-action-card-panes&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Find your place on the Exchange&lt;/h2&gt;  
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view view--homepage-cardflip&quot;&gt;
+                &lt;div class=&quot;views-row&quot;&gt;
+                  &lt;div class=&quot;cardflip cardflip--a&quot;&gt;
+                    &lt;div class=&quot;cardflip__title&quot;&gt;Help an Innovator&lt;/div&gt;
+                    &lt;div class=&quot;cardflip__image&quot;&gt;&lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;div class=&quot;cardflip cardflip--b&quot;&gt;
+                    &lt;div class=&quot;cardflip__title&quot;&gt;Help an Innovator&lt;/div&gt;
+                    &lt;div class=&quot;cardflip__description&quot;&gt;Discussion on the Exchange await your insight!&lt;/div&gt;
+                    &lt;div class=&quot;cardflip__link&quot;&gt;&lt;a href=&quot;#&quot;&gt;View Discussions&lt;/a&gt;&lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;          &lt;div class=&quot;pane pane--homepage-views-staff-picks-pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+            &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;          &lt;div class=&quot;pane pane--homepage-views-funding-pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+            &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class=&quot;l-villain&quot;&gt;
+         &lt;div class=&quot;pane pane--homepage-footer-callout&quot;&gt;
+           &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+           &lt;div class=&quot;pane__content&quot;&gt;
+           &lt;/div&gt;
+         &lt;/div&gt;      &lt;/div&gt;
+      &lt;div class=&quot;l-postscript&quot;&gt;
+        &lt;div class=&quot;layout-constrain&quot;&gt;
+          &lt;div class=&quot;pane pane--homepage-join-callout&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;&lt;/h2&gt;  
+            &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
 &lt;/main&gt;
 
